[package]
name = "hospital-evacuation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hospital_evacuation"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = "0.13.0"
rand = "0.8.5"
serde = "1.0.197"
